# ChangeLog for media-video/vdr
# Copyright 2003 Henning Ryll; Distributed under the GPL
# $Header: /home/xubuntu/berlios_backup/github/tmp-cvs/gentoo-deutsch/Repository/ebuilds/media-video/kvdr/ChangeLog,v 1.3 2003/07/06 15:36:35 fow0ryl Exp $

*kvdr-0.6 (6 July 2003)
  6 July 2003; <henning.ryll@web.de> Changelog:
  new version of kvdr

*kvdr-0.52 (25 Feb 2003)
  6 July 2003; <henning.ryll@web.de> Changelog:
  dependency changed

  25 Feb 2003; Henning Ryll <henning.ryll@web.de> Changelog:

  Keyword / Slot added

*kvdr-0.52 (22 Feb 2003)
  22 Feb 2003; Henning Ryll <henning.ryll@web.de> Changelog:
 
  Added initial ChangeLog which should be updated whenever the package is
  updated in any way. This changelog is targetted to users. This means that
  the comments should well explained and written in clean English. The
  details about writing correct changelogs are explained in the
  skel.ChangeLog file which you can find in the root directory of the
  portage repository.

  This is my first ebuild script, so please be considerately with me. 