@@ -1,5 +1,7 @@
-MD5 c7761dea6d39833f4bec7afe76a78743 kvdr-0.52.ebuild 734
-MD5 699d14f1a41e470312b77e8edaddfd15 kvdr-0.6.ebuild 691
-MD5 f977d6b6913d3e8ada34d4f281d509e9 ChangeLog 850
+MD5 9d28cbd1ae1a0546d634ba5b1c3d46dc kvdr-0.61.ebuild 692
+MD5 a6053e935311ce9c94031e7a076cb81a kvdr-0.52.ebuild 686
+MD5 9d28cbd1ae1a0546d634ba5b1c3d46dc kvdr-0.6.ebuild 692
+MD5 7f45783f592ddef038870228bdb9d54a ChangeLog 1013
 MD5 07ad78b92bad488365e53b885d2cc18b files/digest-kvdr-0.52 58
+MD5 81ea43dc81615b16f9288b017f16864b files/digest-kvdr-0.61 58
 MD5 5831dc469b88b0ecfb9e88ac304df462 files/digest-kvdr-0.6 57
